Update bot to store ID of LINE in datastore

--- a/cloud_function/package.json
+++ b/cloud_function/package.json
@@ -4,6 +4,7 @@
     "main": "index.js", 
     "dependencies": {
         "@line/bot-sdk": "^5.0.0",
+        "@google-cloud/datastore": "^1.1.0",
         "dotenv": "^4.0.0"
     }
 }
